Add signal parsing support to Extension API; implement SignalInfo and SignalArgument models